<resources>
    <string name="app_name" translatable="false">Rethink</string>
    <string name="app_name_small_case" translatable="false">rethink</string>
    <string name="title_about" translatable="true">About</string>
    <string name="title_settings" translatable="true">Settings</string>
    <string name="title_statistics" translatable="true">Stats</string>
    <string name="title_proc" translatable="false">Proc</string>
    <string name="pause_title_desc" translatable="true">taking a nap…</string>
    <string name="settings_title_desc" translatable="true">A highly customizable DNS and Firewall</string>
    <string name="about_title_desc" translatable="true">Detect and block network security threats</string>
    <string name="txt_home" translatable="true">Home</string>
    <string name="accessibility_service_description" translatable="true">
        Rethink uses accessibility service to detect and firewall background applications.
        Rethink does not collect or sell any information.
    </string>
    <string name="next" translatable="true">Next</string>
    <string name="skip" translatable="true">Skip</string>
    <string name="finish" translatable="true">Finish</string>
    <string name="lbl_cancel" translatable="true">Cancel</string>
    <string name="lbl_apply" translatable="true">Apply</string>
    <string name="lbl_dismiss" translatable="true">Dismiss</string>
    <string name="lbl_all" translatable="true">All</string>
    <string name="lbl_allowed" translatable="true">Allowed</string>
    <string name="lbl_maybe_blocked" translatable="true">Maybe Blocked</string>
    <string name="lbl_blocked" translatable="true">Blocked</string>
    <string name="lbl_disabled" translatable="true">Disabled</string>
    <string name="lbl_domain" translatable="true">Domain</string>
    <string name="lbl_wildcard" translatable="true">Wildcard</string>
    <string name="lbl_action_required" translatable="true">Action Required</string>
    <string name="lbl_rules" translatable="true">rules</string>
    <string name="lbl_configure" translatable="true">Configure</string>
    <string name="lbl_logs" translatable="true">logs</string>
    <string name="lbl_network" translatable="true">network</string>
    <string name="lbl_create" translatable="true">Create</string>
    <string name="lbl_qr_code" translatable="true">QR Code</string>
    <string name="lbl_import" translatable="true">Import</string>
    <string name="lbl_wireguard" translatable="true">WireGuard</string>
    <string name="lbl_public_key" translatable="true">Public Key</string>
    <string name="lbl_addresses" translatable="true">Addresses</string>
    <string name="lbl_dns_servers" translatable="true">DNS Servers</string>
    <string name="lbl_applications" translatable="true">Applications</string>
    <string name="lbl_ip_rules" translatable="true">IP Rules</string>
    <string name="lbl_domain_rules" translatable="true">Domain Rules</string>
    <string name="lbl_delete" translatable="true">Delete</string>
    <string name="lbl_proceed" translatable="true">Proceed</string>
    <string name="lbl_private_key" translatable="true">Private key</string>
    <string name="lbl_generated" translatable="true">(generated)</string>
    <string name="lbl_random" translatable="true">(random)</string>
    <string name="lbl_listen_port" translatable="true">Listen port</string>
    <string name="lbl_mtu" translatable="true">MTU</string>
    <string name="lbl_auto" translatable="true">(auto)</string>
    <string name="lbl_include" translatable="true">Include</string>
    <string name="lbl_select_all" translatable="true">select all</string>
    <string name="lbl_active" translatable="true">Active</string>
    <string name="lbl_inactive" translatable="true">Inactive</string>
    <string name="lbl_socks5" translatable="true">SOCKS5</string>
    <string name="lbl_http" translatable="true">HTTP</string>
    <string name="lbl_http_socks5" translatable="true">HTTPS &amp; SOCKS5</string>
    <string name="lbl_fast" translatable="true">fast</string>
    <string name="lbl_slow" translatable="true">slow</string>
    <string name="lbl_very" translatable="true">very</string>
    <string name="lbl_add" translatable="true">add</string>
    <string name="lbl_app_wise" translatable="true">per app</string>
    <string name="lbl_sec" translatable="true">sec</string>
    <string name="lbl_min" translatable="true">min</string>
    <string name="lbl_hour" translatable="true">hr</string>
    <string name="lbl_day" translatable="true">day</string>
    <string name="lbl_preshared_key" translatable="true">Preshared key</string>
    <string name="lbl_insecure" translatable="true"> (insecure)</string>
    <string name="lbl_optional" translatable="true">(optional)</string>
    <string name="lbl_persistent_keepalive" translatable="true">Persistent keepalive</string>
    <string name="lbl_allowed_ips" translatable="true">Allowed IPs</string>
    <string name="lbl_save" translatable="true">save</string>
    <string name="lbl_dot" translatable="false">DoT</string>
    <string name="lbl_odoh" translatable="false">ODoH</string>
    <string name="lbl_cache" translatable="true">Cache</string>
    <string name="lbl_status" translatable="true">Status</string>
    <string name="lbl_remove" translatable="true">Remove</string>
    <string name="lbl_last" translatable="true">Last</string>
    <string name="lbl_dot_abbr" translatable="false">DNS-over-TLS</string>
    <string name="lbl_dc" translatable="false">DC</string>
    <string name="lbl_dc_abbr" translatable="false">DNSCrypt</string>
    <string name="lbl_dp" translatable="false">DNS 53</string>
    <string name="lbl_dp_abbr" translatable="false">DNS Proxy</string>
    <string name="lbl_odoh_abbr" translatable="false">Oblivious DNS-over-HTTPS</string>
    <string name="lbl_rdns" translatable="false">RDNS</string>
    <string name="lbl_starting" translatable="true">Starting</string>
    <string name="lbl_overall" translatable="true">Overall</string>
    <string name="lbl_stopped" translatable="true">Stopped</string>
    <string name="lbl_idle" translatable="true">Idle</string>
    <string name="lbl_private" translatable="true">private</string>
    <string name="lbl_secure" translatable="true">secure</string>
    <string name="lbl_anonymous" translatable="true">anonymous</string>
    <string name="lbl_peer" translatable="true">Peer</string>
    <string name="lbl_split" translatable="true">Split</string>
    <string name="lbl_on_device" translatable="true">on-device</string>
    <string name="lbl_ip" translatable="false">IP</string>
    <string name="lbl_unselected" translatable="true">Unselected</string>
    <string name="lbl_notification" translatable="true">notification</string>
    <string name="lbl_mastodon" translatable="false">Mastodon</string>
    <string name="lbl_matrix" translatable="false">Matrix</string>
    <string name="lbl_reddit" translatable="false">Reddit</string>
    <string name="lbl_test" translatable="true">test</string>
    <string name="lbl_protos" translatable="true">protos</string>
    <string name="lbl_experimental" translatable="true">(experimental)</string>
    <string name="lbl_service_providers" translatable="true">Service Providers</string>
    <string name="lbl_search" translatable="false">Search</string>
    <string name="lbl_hop" translatable="true">Relays</string>
    <string name="lbl_ipinfo_inc" translatable="false">IPinfo Inc.</string>
    <string name="lbl_manual" translatable="true">Manual</string>
    <string name="lbl_fallback" translatable="true">Fallback</string>
    <string name="lbl_default" translatable="true">Default</string>
    <string name="lbl_action" translatable="true">Action</string>
    <string name="lbl_connect" translatable="true">Connect</string>
    <string name="lbl_criteria" translatable="true">Criteria</string>
    <string name="memory_notification_text">Rethink is experiencing low memory. System actions may be limited.</string>
    <string name="symbol_upload" translatable="false">%1$s 🔺</string>
    <string name="symbol_download" translatable="false">%1$s 🔻</string>
    <string name="single_argument" translatable="false">%1$s</string>
    <string name="single_argument_parenthesis" translatable="false">(%1$s)</string>
    <string name="two_argument_no_space" translatable="false">%1$s%2$s</string>
    <string name="two_argument_space" translatable="false">%1$s %2$s</string>
    <string name="two_argument_colon" translatable="false">%1$s: %2$s</string>
    <string name="two_argument" translatable="false">%1$s / %2$s</string>
    <string name="three_argument" translatable="false">%1$s %2$s %3$s</string>
    <string name="three_argument_colon" translatable="false">%1$s:%2$s:%3$s</string>
    <string name="symbol_heavy" translatable="false">🐘</string>
    <string name="symbol_turtle" translatable="false">🐢</string>
    <string name="symbol_currency" translatable="false">💲</string>
    <string name="symbol_green_circle" translatable="false">🟢</string>
    <string name="symbol_red_circle" translatable="false">🔴</string>
    <string name="symbol_key" translatable="false">🗝️</string>
    <string name="symbol_global" translatable="false">🌐</string>
    <string name="symbol_clock" translatable="false">🕒</string>
    <string name="symbol_rocket" translatable="false">🚀</string>
    <string name="symbol_bunny" translatable="false">🐇</string>
    <string name="symbol_sparkle" translatable="false">✨</string>
    <string name="symbol_hyphen" translatable="false">-</string>
    <string name="symbol_slash" translatable="false">/</string>
    <string name="symbol_black_down" translatable="false">\u25be</string>
    <string name="symbol_black_up" translatable="false">\u25b4</string>
    <string name="symbol_lockdown" translatable="false">🔒</string>
    <string name="symbol_lightening" translatable="false">⚡</string>
    <string name="symbol_ps" translatable="false">%1$s/S</string>
    <string name="symbol_mb" translatable="false">MB</string>
    <string name="symbol_dollar" translatable="false">$</string>
    <string name="symbol_star" translatable="false">★</string>
    <string name="symbol_sky" translatable="false">⛅</string>
    <string name="symbol_max" translatable="false">🪂</string>
    <string name="symbol_duck" translatable="false">🦆</string>
    <string name="symbol_diamond" translatable="false">🔷</string>
    <string name="symbol_mobile" translatable="false">📱</string>
    <string name="symbol_satellite" translatable="false">🛰️</string>
    <string name="symbol_id" translatable="false">🆔</string>
    <string name="symbol_lock" translatable="false">🔒</string>
    <string name="symbol_unlock" translatable="false">🔓</string>
    <string name="numeric_one" translatable="false">1</string>
    <string name="numeric_twenty_four" translatable="false">24</string>
    <string name="numeric_seven" translatable="false">7</string>
    <string name="slide_2_title" translatable="true">Welcome</string>
    <string name="slide_2_desc" translatable="true">Rethink is the easiest way to monitor network activity, bypass Internet censorship, and firewall apps on your Android device.</string>
    <string name="slide_1_title" translatable="true">Free and Open Source</string>
    <string name="slide_1_desc" translatable="true">Rethink is an open source software backed by Mozilla Builders MVP program, FOSS United Foundation.</string>
    <string name="local_hosts_profiles_hint" translatable="false">Tap profile to toggle ON/OFF. Long press for more actions.</string>
    <string name="local_hosts_add_profile" translatable="false">Add Profile</string>
    <string name="local_hosts_add_rule" translatable="false">Add Rule</string>
    <string name="local_hosts_import_file" translatable="false">Import File</string>
    <string name="local_hosts_sync_remote" translatable="false">Sync Remote</string>
</resources>